ServerResource/old/compres.user45.txt
D:\ServerResource\Template_user45.java:20: error: not a statement
		null
		^
D:\ServerResource\Template_user45.java:20: error: ';' expected
		null
		    ^
2 errors
